# xplpc

./: .ci-ignore  .clang-format  .editorconfig  .gitignore  .swiftlint.yml  Brewfile  CMakeLists.txt  LICENSE.md  Makefile  README.md  conanfile.py  detekt.yml  requirements.txt  xplpc.py
.github/actions/get-avd-info/: action.yml
.github/workflows/: c.yml  cxx.yml  flutter.yml  kotlin-android.yml  kotlin-desktop.yml  kotlin.yml  python.yml  swift.yml  wasm.yml
c/lib/: CMakeLists.txt
c/sample/: CMakeLists.txt
c/sample/src/: main.cpp
c/tests/: CMakeLists.txt
c/tests/include/fixtures/: GeneralTest.hpp
c/tests/src/: ClientTest.cpp  ConcurrencyTest.cpp  CoreTest.cpp  ProxyTest.cpp
cmake/: CPM.cmake  conan-dependency.cmake  conan-downloader.cmake  cpm-dependency.cmake
cmake/conan/: conan-dependency.cmake
cmake/cpm/: cpm-dependency.cmake  cpm-downloader.cmake  cpm_downloader.cmake
cmake/ios/: ios.toolchain.cmake
cmake/java/: java-dependency.cmake
conan/darwin-toolchain/: README.md  conanfile.py
conan/profiles/: xplpc_android_profile  xplpc_ios_profile  xplpc_macos_profile  xplpc_tvos_profile  xplpc_wasm_profile
core/: c.py  conan.py  config.py  cxx.py  docs.py  flutter.py  general.py  kotlin.py  net.py  python.py  swift.py  tool.py  util.py  wasm.py
core/targets/: kotlin.py  kotlin_android.py  kotlin_desktop.py  kotlin_flutter.py  platform_linux.py  platform_windows.py  swift_ios.py  swift_ios_flutter.py  swift_macos.py  swift_macos_flutter.py  swift_test.py  wasm.py
cxx/custom/: CMakeLists.txt
cxx/lib/: CMakeLists.txt
cxx/lib/include/xplpc/: xplpc.hpp
cxx/sample/: CMakeLists.txt
cxx/sample/src/: main.cpp
cxx/tests/: CMakeLists.txt
cxx/tests/include/fixtures/: GeneralTest.hpp
cxx/tests/src/: AllTypesTest.cpp  ClientTest.cpp  CompileDefinitionsTest.cpp  ConcurrencyTest.cpp  CoreTest.cpp  LocalClientTest.cpp  ProxyClientTest.cpp  RemoteClientTest.cpp  TodoTest.cpp
docs/: c.md  contribution.md  cxx.md  dependency-manager.md  flutter.md  general.md  kotlin.md  purpose.md  python.md  swift.md  wasm.md
flutter/plugin/: .editorconfig  .gitignore  LICENSE  README.md  build.yaml  pubspec.yaml
flutter/plugin/android/: build.gradle  settings.gradle
flutter/plugin/example/: .gitignore  README.md  pubspec.yaml
flutter/plugin/example/lib/: main.dart
flutter/plugin/example/linux/: CMakeLists.txt  my_application.cc
flutter/plugin/example/windows/: CMakeLists.txt
flutter/plugin/ios/: xplpc.podspec  xplpc.xcframework  xplpc_plugin.podspec
flutter/plugin/lib/client/: client.dart  local_client.dart  proxy_client.dart  remote_client.dart
flutter/plugin/lib/core/: config.dart  xplpc.dart
flutter/plugin/lib/data/: callback_list.dart  codable_type_list.dart  mapping_list.dart
flutter/plugin/lib/helper/: byte_array_helper.dart
flutter/plugin/lib/map/: mapping_item.dart
flutter/plugin/lib/message/: message.dart  param.dart  request.dart  response.dart
flutter/plugin/lib/proxy/: platform_proxy.dart
flutter/plugin/lib/reflectable/: reflector.dart
flutter/plugin/lib/serializer/: json_serializer.dart  serializer.dart
flutter/plugin/lib/type/: dataview.dart  typedefs.dart
flutter/plugin/lib/util/: log.dart  unique_id.dart
flutter/plugin/linux/: CMakeLists.txt
flutter/plugin/macos/: xplpc.podspec  xplpc.xcframework  xplpc_plugin.podspec
flutter/plugin/test/: client_test.dart  core_test.dart  local_client_test.dart  proxy_client_test.dart  remote_client_test.dart
flutter/plugin/windows/: CMakeLists.txt
jni/lib/: CMakeLists.txt
kotlin/android/lib/: build.gradle
kotlin/android/sample/: build.gradle
kotlin/android/sample/app/: build.gradle
kotlin/desktop/lib/: build.gradle  gradle.properties  settings.gradle
kotlin/desktop/sample/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/desktop/sample/.run/: desktop.run.xml
kotlin/lib/: build.gradle  settings.gradle
kotlin/lib/gradle/wrapper/: gradle-wrapper.properties
kotlin/sample/: build.gradle  settings.gradle
kotlin/sample/app/: build.gradle  proguard-rules.pro
kotlin/sample/gradle/wrapper/: gradle-wrapper.properties
objc/lib/: CMakeLists.txt
python/lib/: MANIFEST.in  setup.py
python/sample/: pyinstaller.spec  pyproject.toml  sample.py
python/sample/pyinstaller/: pyinstaller.spec  pyproject.toml  requirements.txt
python/sample/pyinstaller/hooks/: hook-xplpc.py
python/sample/pyinstaller/resources/macos/: entitlements.plist  icon.icns
python/sample/src/: main.py  requirements.txt
python/tests/: test_client.py  test_concurrency.py  test_core.py
swift/lib/: CMakeLists.txt
swift/lib/Sources/AnyCodable/: AnyCodable.swift  AnyCodableCharacter.swift  AnyDecodable.swift  AnyEncodable.swift
swift/lib/Sources/Client/: Client.swift  LocalClient.swift  ProxyClient.swift  RemoteClient.swift
swift/lib/Sources/Core/: Config.swift  XPLPC.swift
swift/lib/Sources/Data/: CallbackList.swift  MappingData.swift  MappingList.swift
swift/lib/Sources/Helper/: ByteArrayHelper.swift
swift/lib/Sources/Map/: MappingItem.swift
swift/lib/Sources/Message/: Message.swift  Param.swift  Request.swift  Response.swift
swift/lib/Sources/Platform/: PlatformInitializer.swift
swift/pod/: xplpc.podspec  xplpc.xcframework
swift/sample/: Podfile.sample
swift/sample/Runner/: AppDelegate.swift  Info.plist  MainViewController.swift
swift/sample/Runner.xcodeproj/: project.pbxproj
swift/sample/RunnerTests/: RunnerTests.swift
swift/sample/RunnerUITests/: RunnerUITests.swift  RunnerUITestsLaunchTests.swift
swift/support/: CMakeLists.txt  module.modulemap  xplpc.h
swift/tests/: CMakeLists.txt
swift/tests/Sources/: AllTypesTest.swift  ClientTest.swift  CoreTest.swift  LocalClientTest.swift  ProxyClientTest.swift  RemoteClientTest.swift  TodoTest.swift
wasm/lib/: CMakeLists.txt
wasm/lib/src/: bind.cpp
wasm/sample/: .eslintrc.json  .prettierrc  index.html  jest.config.js  package.json  tsconfig.json  vite.config.ts
wasm/sample/public/: README.md
wasm/sample/src/: App.vue  main.ts
wasm/sample/types/: xplpc-wasm.d.ts
(+203 files in other folders)
